Fix: Checkbox visibility issue in light themes
- Add theme-specific SVG icons (check-dark.svg, check-light.svg)
- Update palette variables for proper contrast in all themes
- Modify checkbox component to use theme-aware styling
- Ensures checkboxes are visible in both light and dark themes

Fixes #136

--- a/src/components/Checkbox/Checkbox.module.scss
+++ b/src/components/Checkbox/Checkbox.module.scss
@@ -49,9 +49,9 @@
   width: 12px;
   height: 12px;
 
-  background-color: var(--text-primary);
-  -webkit-mask: url(../../assets/icons/check.svg) 0 / 100% no-repeat;
-  mask: url(../../assets/icons/check.svg) 0 / 100% no-repeat;
+  background-color: var(--checkbox-check-color);
+  -webkit-mask: var(--check-image) 0 / 100% no-repeat;
+  mask: var(--check-image) 0 / 100% no-repeat;
 }
 
 
